<resources>
    <string name="app_name">AppNASA</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">"wiki search "</string>
    <string name="wiki_helper_text">search for terms in wiki</string>
    <string name="error_link_is_empty">Error: link is empty</string>
    <string name="button_ok">OK</string>
    <string name="bottom_sheet_description_header_text_default">Title text</string>
    <string name="bottom_sheet_description_text_default">Description</string>
    <string name="settings">Settings</string>
    <string name="text_mars_theme">Mars theme</string>
    <string name="text_moon_theme">Moon theme</string>
    <string name="text_select_theme">Select theme:</string>
    <string name="photo_of_the_earth">Photo of the Earth</string>
    <string name="info_about_planets">About Planets</string>
    <string name="lorem_ipsum">text</string>
</resources>